name:                persistent-ip 
version:             0.5.2
synopsis:            Code for using the ip package with yesod
description:         Please see README.md
homepage:            https://github.com/andrewthad/yesod-ip#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:
    Net.IPv4.Unnormalized
  exposed-modules:
    Yesod.Form.Net
    Database.Persist.Net.Simple
    Database.Persist.Net.PostgreSQL
    Web.PathPieces.Net
    Web.HttpApiData.Net
  build-depends:
      base >= 4.7 && < 5
    , ip >= 1.4.1 && < 1.8
    , persistent >= 2.1 && < 2.15
    , text >= 1.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/yesod-ip
